ESASSUP-48 Fix a bug that the benefits are not wrapped on IE

--- a/angular/src/app/questionnaire/questions/benefits-questions/benefits-question.component.scss
+++ b/angular/src/app/questionnaire/questions/benefits-questions/benefits-question.component.scss
@@ -10,6 +10,7 @@ $benefit-font-size-desktop-tablet: 18px;
 
   .benefits {
     margin-bottom: 40px;
+    width: 100%; // For IE
 
     .benefit {
       margin: 10px 0;
